Fix asset paths for GitHub Pages (remove leading /)

--- a/index2.html
+++ b/index2.html
@@ -14,10 +14,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="/assets/styles/style.css" />
-    <link rel="stylesheet" href="/assets/styles/modern-normalize.css" />
-    <link rel="stylesheet" href="/assets/styles/utils.css" />
-    <link rel="stylesheet" href="/assets/styles/components/home2.css" />
+    <link rel="stylesheet" href="assets/styles/style.css" />
+    <link rel="stylesheet" href="assets/styles/modern-normalize.css" />
+    <link rel="stylesheet" href="assets/styles/utils.css" />
+    <link rel="stylesheet" href="assets/styles/components/home2.css" />
   </head>
   <body>
     <!-- Navigation -->
@@ -32,7 +32,7 @@
       <div class="nav-content">
         <!-- Logo Section -->
         <div class="logo-section">
-          <div class="logo"><img src="/assets/images/logo.png" alt="" /></div>
+          <div class="logo"><img src="assets/images/logo.png" alt="" /></div>
         </div>
 
         <!-- Navigation Menu -->
@@ -44,7 +44,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/information.html"
+              href="pages/information.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Information</a
@@ -52,7 +52,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/ratecards.html"
+              href="pages/ratecards.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Ratecards</a
@@ -60,7 +60,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/store.html"
+              href="pages/store.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Store</a
@@ -68,7 +68,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/contact.html"
+              href="pages/contact.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Contact</a
@@ -76,7 +76,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/blog.html"
+              href="pages/blog.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Blog</a
@@ -94,7 +94,7 @@
               <i class="fas fa-images"></i>
               View Ratecards
             </a>
-            <a href="/pages/contact.html" class="btn btn-secondary">
+            <a href="pages/contact.html" class="btn btn-secondary">
               <i class="fas fa-envelope"></i>
               Contact Us
             </a>
@@ -151,7 +151,7 @@
             <div class="footer-section">
               <div class="footer-logo">
                 <img
-                  src="/assets/images/logo2.png"
+                  src="assets/images/logo2.png"
                   class="footer-logo-icon"
                   alt="Impasto Photography"
                 />
@@ -168,31 +168,31 @@
                   </a>
                 </li>
                 <li>
-                  <a href="/pages/information.html">
+                  <a href="pages/information.html">
                     <i class="fas fa-chevron-right"></i>
                     Information
                   </a>
                 </li>
                 <li>
-                  <a href="/pages/ratecards.html">
+                  <a href="pages/ratecards.html">
                     <i class="fas fa-chevron-right"></i>
                     Ratecards
                   </a>
                 </li>
                 <li>
-                  <a href="/pages/store.html">
+                  <a href="pages/store.html">
                     <i class="fas fa-chevron-right"></i>
                     Store
                   </a>
                 </li>
                 <li>
-                  <a href="/pages/contact.html">
+                  <a href="pages/contact.html">
                     <i class="fas fa-chevron-right"></i>
                     Contact
                   </a>
                 </li>
                 <li>
-                  <a href="/pages/blog.html">
+                  <a href="pages/blog.html">
                     <i class="fas fa-chevron-right"></i>
                     Blog
                   </a>
@@ -299,7 +299,7 @@
       </footer>
     </main>
 
-    <script src="/assets/src/general.js"></script>
-    <script src="/assets/src/gallery.js"></script>
+    <script src="assets/src/general.js"></script>
+    <script src="assets/src/gallery.js"></script>
   </body>
 </html>
