--- a/indes.html
+++ b/indes.html
@@ -353,7 +353,7 @@
         align-items: center;
         justify-content: center;
         background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-          url("/assets/images/img0.jpg");
+          url("assets/images/img0.jpg");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -1324,7 +1324,7 @@
     <nav class="navbar">
       <!-- Mobile Logo -->
       <div class="mobile-logo">
-        <img src="/assets/images/logo.png" alt="Logo" />
+        <img src="assets/images/logo.png" alt="Logo" />
       </div>
       <!-- Hero Controls (Theme Toggle and Mobile Menu) -->
       <div class="hero-controls">
@@ -1344,7 +1344,7 @@
         <!-- Logo Section -->
         <div class="logo-section">
           <div class="logo">
-            <img src="/assets/images/logo.png" alt="Logo" />
+            <img src="assets/images/logo.png" alt="Logo" />
           </div>
         </div>
         <!-- Navigation Menu -->
@@ -1356,7 +1356,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/information.html"
+              href="pages/information.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Information</a
@@ -1364,7 +1364,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/ratecards.html"
+              href="pages/ratecards.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Ratecards</a
@@ -1372,7 +1372,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/store.html"
+              href="pages/store.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Store</a
@@ -1380,7 +1380,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/contact.html"
+              href="pages/contact.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Contact</a
@@ -1388,7 +1388,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/blog.html"
+              href="pages/blog.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Blog</a
@@ -1405,7 +1405,7 @@
               <i class="fas fa-images"></i>
               View Gallery
             </a>
-            <a href="/pages/contact.html" class="btn btn-secondary">
+            <a href="pages/contact.html" class="btn btn-secondary">
               <i class="fas fa-envelope"></i>
               Contact Us
             </a>
@@ -1424,7 +1424,7 @@
       <div class="container">
         <!-- Logo -->
         <div class="sticky-logo">
-          <img src="/assets/images/logo.png" alt="Logo" />
+          <img src="assets/images/logo.png" alt="Logo" />
         </div>
         <!-- Desktop Navigation Menu -->
         <ul class="sticky-nav-menu">
@@ -1435,7 +1435,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/information.html"
+              href="pages/information.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Information</a
@@ -1443,7 +1443,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/ratecards.html"
+              href="pages/ratecards.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Ratecards</a
@@ -1451,7 +1451,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/store.html"
+              href="pages/store.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Store</a
@@ -1459,7 +1459,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/contact.html"
+              href="pages/contact.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Contact</a
@@ -1467,7 +1467,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/blog.html"
+              href="pages/blog.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Blog</a
@@ -1501,7 +1501,7 @@
       </li>
       <li class="nav-item">
         <a
-          href="/pages/information.html"
+          href="pages/information.html"
           class="nav-link"
           onclick="setActiveNav(this); closeMobileMenu()"
           >Information</a
@@ -1509,7 +1509,7 @@
       </li>
       <li class="nav-item">
         <a
-          href="/pages/ratecards.html"
+          href="pages/ratecards.html"
           class="nav-link"
           onclick="setActiveNav(this); closeMobileMenu()"
           >Ratecards</a
@@ -1517,7 +1517,7 @@
       </li>
       <li class="nav-item">
         <a
-          href="/pages/store.html"
+          href="pages/store.html"
           class="nav-link"
           onclick="setActiveNav(this); closeMobileMenu()"
           >Store</a
@@ -1525,7 +1525,7 @@
       </li>
       <li class="nav-item">
         <a
-          href="/pages/contact.html"
+          href="pages/contact.html"
           class="nav-link"
           onclick="setActiveNav(this); closeMobileMenu()"
           >Contact</a
@@ -1533,7 +1533,7 @@
       </li>
       <li class="nav-item">
         <a
-          href="/pages/blog.html"
+          href="pages/blog.html"
           class="nav-link"
           onclick="setActiveNav(this); closeMobileMenu()"
           >Blog</a
@@ -1605,7 +1605,7 @@
             <div class="footer-section">
               <div class="footer-logo">
                 <img
-                  src="/assets/images/logo2.png"
+                  src="assets/images/logo2.png"
                   class="footer-logo-icon"
                   alt="Impasto Photography"
                 />
@@ -1622,31 +1622,31 @@
                   </a>
                 </li>
                 <li>
-                  <a href="/pages/information.html">
+                  <a href="pages/information.html">
                     <i class="fas fa-chevron-right"></i>
                     Information
                   </a>
                 </li>
                 <li>
-                  <a href="/pages/ratecards.html">
+                  <a href="pages/ratecards.html">
                     <i class="fas fa-chevron-right"></i>
                     Ratecards
                   </a>
                 </li>
                 <li>
-                  <a href="/pages/store.html">
+                  <a href="pages/store.html">
                     <i class="fas fa-chevron-right"></i>
                     Store
                   </a>
                 </li>
                 <li>
-                  <a href="/pages/contact.html">
+                  <a href="pages/contact.html">
                     <i class="fas fa-chevron-right"></i>
                     Contact
                   </a>
                 </li>
                 <li>
-                  <a href="/pages/blog.html">
+                  <a href="pages/blog.html">
                     <i class="fas fa-chevron-right"></i>
                     Blog
                   </a>
@@ -1878,7 +1878,7 @@
         item.className = "gallery-item fade-in";
         item.onclick = () => openLightbox(imageNumber);
         const img = document.createElement("img");
-        img.src = `/assets/images/img${imageNumber}.jpg`;
+        img.src = `assets/images/img${imageNumber}.jpg`;
         img.alt = `Gallery Image ${imageNumber}`;
         img.className = "no-context-menu";
         img.draggable = false;
@@ -1934,7 +1934,7 @@
         const lightboxCounter = document.getElementById("lightboxCounter");
         currentImageIndex = imageNumber;
         currentZoom = 1;
-        lightboxImage.src = `/assets/images/img${imageNumber}.jpg`;
+        lightboxImage.src = `assets/images/img${imageNumber}.jpg`;
         lightboxImage.alt = `Gallery Image ${imageNumber}`;
         lightboxCounter.textContent = `Image ${imageNumber} of ${totalImages}`;
         lightbox.classList.add("active");
@@ -1955,7 +1955,7 @@
       function updateLightboxImage() {
         const lightboxImage = document.getElementById("lightboxImage");
         const lightboxCounter = document.getElementById("lightboxCounter");
-        lightboxImage.src = `/assets/images/img${currentImageIndex}.jpg`;
+        lightboxImage.src = `assets/images/img${currentImageIndex}.jpg`;
         lightboxImage.alt = `Gallery Image ${currentImageIndex}`;
         lightboxCounter.textContent = `Image ${currentImageIndex} of ${totalImages}`;
         currentZoom = 1;
