--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="/assets/styles/css/all.min.css" />
-    <link rel="stylesheet" href="/assets/styles/style.css" />
-    <link rel="stylesheet" href="/assets/styles/utils.css" />
-    <link rel="stylesheet" href="/assets/styles/components/theme.css" />
-    <link rel="stylesheet" href="/assets/styles/components/home.css" />
+    <link rel="stylesheet" href="assets/styles/css/all.min.css" />
+    <link rel="stylesheet" href="assets/styles/style.css" />
+    <link rel="stylesheet" href="assets/styles/utils.css" />
+    <link rel="stylesheet" href="assets/styles/components/theme.css" />
+    <link rel="stylesheet" href="assets/styles/components/home.css" />
   </head>
   <body>
     <!-- Navigation -->
@@ -26,7 +26,7 @@
       <div class="nav-container container">
         <a href="#home" class="logo">
           <img
-            src="/assets/images/logo2.png"
+            src="assets/images/logo2.png"
             alt="Impasto logo"
             class="logo-icon"
           />
@@ -39,7 +39,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/information.html"
+              href="pages/information.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Information</a
@@ -47,7 +47,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/ratecards.html"
+              href="pages/ratecards.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Ratecards</a
@@ -55,7 +55,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/store.html"
+              href="pages/store.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Store</a
@@ -63,7 +63,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/contact.html"
+              href="pages/contact.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Contact</a
@@ -71,7 +71,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="/pages/blog.html"
+              href="pages/blog.html"
               class="nav-link"
               onclick="setActiveNav(this)"
               >Blog</a
@@ -101,11 +101,11 @@
           Where artistry meets technology to create timeless memories
         </p>
         <div class="hero-buttons">
-          <a href="/pages/ratecards.html" class="btn btn-primary">
+          <a href="pages/ratecards.html" class="btn btn-primary">
             <i class="fas fa-images"></i>
             View Ratecards
           </a>
-          <a href="/pages/contact.html" class="btn btn-secondary">
+          <a href="pages/contact.html" class="btn btn-secondary">
             <i class="fas fa-envelope"></i>
             Contact Us
           </a>
@@ -155,7 +155,7 @@
           <div class="footer-section">
             <div class="footer-logo">
               <img
-                src="/assets/images/logo2.png"
+                src="assets/images/logo2.png"
                 class="footer-logo-icon"
                 alt="Impasto Photography"
               />
@@ -172,31 +172,31 @@
                 </a>
               </li>
               <li>
-                <a href="/pages/information.html">
+                <a href="pages/information.html">
                   <i class="fas fa-chevron-right"></i>
                   Information
                 </a>
               </li>
               <li>
-                <a href="/pages/ratecards.html">
+                <a href="pages/ratecards.html">
                   <i class="fas fa-chevron-right"></i>
                   Ratecards
                 </a>
               </li>
               <li>
-                <a href="/pages/store.html">
+                <a href="pages/store.html">
                   <i class="fas fa-chevron-right"></i>
                   Store
                 </a>
               </li>
               <li>
-                <a href="/pages/contact.html">
+                <a href="pages/contact.html">
                   <i class="fas fa-chevron-right"></i>
                   Contact
                 </a>
               </li>
               <li>
-                <a href="/pages/blog.html">
+                <a href="pages/blog.html">
                   <i class="fas fa-chevron-right"></i>
                   Blog
                 </a>
@@ -301,7 +301,7 @@
         </div>
       </div>
     </footer>
-    <script src="/assets/src/general.js"></script>
-    <script src="/assets/src/gallery.js"></script>
+    <script src="assets/src/general.js"></script>
+    <script src="assets/src/gallery.js"></script>
   </body>
 </html>
