homepage complete fin

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <meta property="og:url" content="https://impastophotography.com" />
     <meta
       property="og:image"
-      content="https://impastophotography.com/assets/images/og-image.jpg"
+      content="https://impastophotography.comassets/images/og-image.jpg"
     />
 
     <!-- Twitter Card Meta Tags -->
@@ -61,12 +61,12 @@
     />
     <meta
       name="twitter:image"
-      content="https://impastophotography.com/assets/images/og-image.jpg"
+      content="https://impastophotography.comassets/images/og-image.jpg"
     />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/assets/images/logo-fav.png" />
-    <link rel="apple-touch-icon" href="/assets/images/logo.png" />
+    <link rel="icon" type="image/x-icon" href="assets/images/logo-fav.png" />
+    <link rel="apple-touch-icon" href="assets/images/logo.png" />
 
     <!--Default Styles-->
     <link rel="stylesheet" href="assets/styles/modern-normalize.css" />
@@ -89,7 +89,7 @@
       <div class="nav-container">
         <a href="#home" class="logo">
           <img
-            src="/assets/images/logo2.png"
+            src="assets/images/logo2.png"
             alt="Impasto logo"
             class="logo-icon"
           />
@@ -231,23 +231,23 @@
       <div class="hero-slider">
         <div
           class="hero-slide active"
-          style="background-image: url('/assets/images/img0.jpg')"
+          style="background-image: url('assets/images/img0.jpg')"
         ></div>
         <div
           class="hero-slide"
-          style="background-image: url('/assets/images/img1.jpg')"
+          style="background-image: url('assets/images/img1.jpg')"
         ></div>
         <div
           class="hero-slide"
-          style="background-image: url('/assets/images/img2.jpg')"
+          style="background-image: url('assets/images/img2.jpg')"
         ></div>
         <div
           class="hero-slide"
-          style="background-image: url('/assets/images/img3.jpg')"
+          style="background-image: url('assets/images/img3.jpg')"
         ></div>
         <div
           class="hero-slide"
-          style="background-image: url('/assets/images/img4.jpg')"
+          style="background-image: url('assets/images/img4.jpg')"
         ></div>
       </div>
       <div class="hero-overlay"></div>
@@ -349,7 +349,7 @@
           <div class="footer-section">
             <div class="footer-logo">
               <img
-                src="/assets/images/logo2.png"
+                src="assets/images/logo2.png"
                 class="footer-logo-icon"
                 alt="Impasto Photography"
               />
