--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <link rel="stylesheet" href="assets/styles/style.css" />
     <link rel="stylesheet" href="assets/styles/utils.css" />
     <link rel="stylesheet" href="assets/styles/components/navhero.css" />
-    <link rel="stylesheet" href="assets/styles/components/gallery.css" />
+    <link rel="stylesheet" href="assets/styles/components/gal.css" />
     <link rel="stylesheet" href="assets/styles/components/footer.css" />
   </head>
   <body>
@@ -329,7 +329,7 @@
           <i class="fas fa-chevron-right"></i>
         </button>
         <!-- Image Container -->
-        <div class="lightbox-content">
+        <div class="lightbox-content" id="lightboxContent">
           <div class="lightbox-image-container" id="lightboxImageContainer">
             <img src="" alt="" class="lightbox-image" id="lightboxImage" />
           </div>
@@ -508,6 +508,6 @@
     </footer>
     <script src="assets/src/general.js"></script>
     <script src="assets/src/navhero.js"></script>
-    <script src="assets/src/gallery.js"></script>
+    <script src="assets/src/gal.js"></script>
   </body>
 </html>
