--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     <!-- Main Content -->
     <main>
       <!-- Gallery Section -->
-      <section id="gallery" class="gallery container fade-in">
+      <section id="gallery next-section" class="gallery container fade-in">
         <div class="gallery-header slide-in-left">
           <h2 class="gallery-title">Our Portfolio</h2>
           <p class="gallery-subtitle">
