--- a/abb.html
+++ b/abb.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Professional Photography Studio - Cherished moments come as you are. Where artistry meets technology to create timeless memories."
+      content="Professional Photography Studio - Impasto Photography: Where artistry meets technology to create timeless memories. Capturing life's precious moments with excellence since 2010."
     />
     <meta
       name="keywords"
-      content="photography, studio, professional, memories, artistry, technology"
+      content="photography, studio, professional, memories, artistry, technology, portrait, wedding, event, commercial, Ghana, Accra"
     />
     <meta name="author" content="Impasto Photography Studio" />
     <title>
-      Impasto Photography Studio | Professional Photography Services
+      About Us | Impasto Photography Studio - Professional Photography Services
     </title>
 
     <!-- Google Fonts -->
@@ -21,70 +21,74 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <!-- Font Awesome for Icons -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
 
+    <!-- Font Awesome for Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+
     <!-- Open Graph Meta Tags for SEO -->
     <meta
       property="og:title"
-      content="Impasto Photography Studio | Professional Photography Services"
+      content="About Us | Impasto Photography Studio - Professional Photography Services"
     />
     <meta
       property="og:description"
-      content="Professional Photography Studio - Cherished moments come as you are. Where artistry meets technology to create timeless memories."
+      content="Learn about Impasto Photography Studio's journey, mission, and the team of professionals dedicated to capturing your precious moments with artistry and excellence."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://impastophotography.com" />
+    <meta
+      property="og:url"
+      content="https://impastophotography.com/about.html"
+    />
     <meta
       property="og:image"
-      content="https://impastophotography.comassets/images/og-image.jpg"
+      content="https://impastophotography.com/assets/images/og-image.jpg"
     />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Impasto Photography Studio | Professional Photography Services"
+      content="About Us | Impasto Photography Studio - Professional Photography Services"
     />
     <meta
       name="twitter:description"
-      content="Professional Photography Studio - Cherished moments come as you are. Where artistry meets technology to create timeless memories."
+      content="Learn about Impasto Photography Studio's journey, mission, and the team of professionals dedicated to capturing your precious moments with artistry and excellence."
     />
     <meta
       name="twitter:image"
-      content="https://impastophotography.comassets/images/og-image.jpg"
+      content="https://impastophotography.com/assets/images/og-image.jpg"
     />
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/images/logo-fav.png" />
     <link rel="apple-touch-icon" href="assets/images/logo.png" />
 
-    <!--Default Styles-->
+    <!-- Default Styles -->
     <link rel="stylesheet" href="assets/styles/modern-normalize.css" />
     <link rel="stylesheet" href="assets/styles/style.css" />
     <link rel="stylesheet" href="assets/styles/utils.css" />
     <link rel="stylesheet" href="assets/styles/components/navhero.css" />
     <link rel="stylesheet" href="assets/styles/components/footer.css" />
-    <style>
-      * ===========================================
-    ABOUT US PAGE STYLES
-   =========================================== */
 
-/* About Hero Section */
-.about-hero {
+    <style>
+      /* ===========================================
+        ABOUT US PAGE STYLES
+       =========================================== */
+
+      /* About Hero Section */
+      .about-hero {
         background: linear-gradient(135deg, var(--gradient-primary));
         padding: var(--spacing-3xl) 0;
         position: relative;
         overflow: hidden;
+        margin-top: 60px; /* Space for fixed navbar */
       }
 
       .about-hero::before {
@@ -190,6 +194,36 @@
         grid-template-columns: 1fr;
         gap: var(--spacing-2xl);
         align-items: center;
+      }
+
+      .story-image {
+        position: relative;
+        border-radius: var(--radius-xl);
+        overflow: hidden;
+        box-shadow: 0 15px 30px rgba(0, 0, 0, 0.15);
+        height: 400px;
+      }
+
+      .story-image img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: transform var(--transition-normal);
+      }
+
+      .story-image:hover img {
+        transform: scale(1.05);
+      }
+
+      .story-image::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: linear-gradient(to top, rgba(0, 0, 0, 0.4), transparent);
+        pointer-events: none;
       }
 
       .story-text {
@@ -524,7 +558,65 @@
         min-width: 200px;
       }
 
+      /* Dark Theme Support */
+      [data-theme="dark"] .about-hero {
+        background: linear-gradient(135deg, var(--gradient-secondary));
+      }
+
+      [data-theme="dark"] .mission-card,
+      [data-theme="dark"] .vision-card,
+      [data-theme="dark"] .value-item,
+      [data-theme="dark"] .timeline-content {
+        background: var(--bg-tertiary);
+        border-color: var(--border);
+      }
+
+      /* Animation Classes */
+      .slide-in-up {
+        opacity: 0;
+        transform: translateY(50px);
+        transition: opacity 0.8s ease, transform 0.8s ease;
+      }
+
+      .slide-in-up.visible {
+        opacity: 1;
+        transform: translateY(0);
+      }
+
       /* Responsive Design */
+      @media (min-width: 475px) {
+        .section {
+          padding: calc(var(--spacing-4xl) * 0.8) 0;
+        }
+
+        .about-title {
+          font-size: clamp(2.2rem, 5vw, 3.2rem);
+        }
+
+        .about-subtitle {
+          font-size: clamp(1.2rem, 3vw, 1.6rem);
+        }
+      }
+
+      @media (min-width: 640px) {
+        .section {
+          padding: calc(var(--spacing-4xl) * 0.9) 0;
+        }
+
+        .story-text p {
+          font-size: 1.15rem;
+        }
+
+        .value-item {
+          padding: calc(var(--spacing-xl) * 1.2);
+        }
+
+        .member-image {
+          width: 270px;
+          height: 270px;
+        }
+      }
+
       @media (min-width: 768px) {
         .story-content {
           grid-template-columns: 1fr 1fr;
@@ -541,6 +633,10 @@
         .team-grid {
           grid-template-columns: repeat(2, 1fr);
         }
+
+        .section {
+          padding: var(--spacing-4xl) 0;
+        }
       }
 
       @media (min-width: 1024px) {
@@ -550,6 +646,10 @@
 
         .team-grid {
           grid-template-columns: repeat(4, 1fr);
+        }
+
+        .story-text p {
+          font-size: 1.2rem;
         }
       }
 
@@ -574,31 +674,6 @@
           flex-direction: column;
           align-items: center;
         }
-      }
-
-      /* Dark Theme Support */
-      [data-theme="dark"] .about-hero {
-        background: linear-gradient(135deg, var(--gradient-secondary));
-      }
-
-      [data-theme="dark"] .mission-card,
-      [data-theme="dark"] .vision-card,
-      [data-theme="dark"] .value-item,
-      [data-theme="dark"] .timeline-content {
-        background: var(--bg-tertiary);
-        border-color: var(--border);
-      }
-
-      /* Animation Classes */
-      .slide-in-up {
-        opacity: 0;
-        transform: translateY(50px);
-        transition: opacity 0.8s ease, transform 0.8s ease;
-      }
-
-      .slide-in-up.visible {
-        opacity: 1;
-        transform: translateY(0);
       }
     </style>
   </head>
@@ -752,74 +827,27 @@
       </div>
     </nav>
 
-    <!-- Hero Section -->
-    <section id="home" class="hero fade-in">
-      <div class="hero-slider">
-        <div
-          class="hero-slide active"
-          style="background-image: url('assets/images/img5.jpg')"
-        ></div>
-        <div
-          class="hero-slide"
-          style="background-image: url('assets/images/img6.jpg')"
-        ></div>
-        <div
-          class="hero-slide"
-          style="background-image: url('assets/images/img7.jpg')"
-        ></div>
-        <div
-          class="hero-slide"
-          style="background-image: url('assets/images/img8.jpg')"
-        ></div>
-        <div
-          class="hero-slide"
-          style="background-image: url('assets/images/img9.jpg')"
-        ></div>
-      </div>
-      <div class="hero-overlay"></div>
-
-      <div class="hero-content">
-        <div class="hero-badge">
-          <i class="fas fa-star"></i>
-          Professional Photography Studio
-        </div>
-        <h1 class="hero-title">WHO WE ARE</h1>
-      </div>
-
-      <!-- Hero Slider Indicators -->
-      <div class="hero-indicators">
-        <div class="hero-indicator active" onclick="goToSlide(0)"></div>
-        <div class="hero-indicator" onclick="goToSlide(1)"></div>
-        <div class="hero-indicator" onclick="goToSlide(2)"></div>
-        <div class="hero-indicator" onclick="goToSlide(3)"></div>
-        <div class="hero-indicator" onclick="goToSlide(4)"></div>
-      </div>
-
-      <div class="scroll-indicator" onclick="scrollToSection('next-section')">
-        <i class="fas fa-chevron-down fa-2x"></i>
-      </div>
-    </section>
-    <!-- Main Content -->
-    <main class="main-content container">
-      <!-- About Hero Section -->
-      <section class="about-hero fade-in" id="next-section">
-        <div class="container">
-          <div class="about-hero-content">
-            <div class="about-hero-text">
-              <h1 class="about-title">About Impasto Photography</h1>
-              <p class="about-subtitle">
-                Capturing Life's Beautiful Moments Since 2010
-              </p>
-              <div class="about-breadcrumb">
-                <a href="#home">Home</a>
-                <i class="fas fa-chevron-right"></i>
-                <span>About Us</span>
-              </div>
+    <!-- About Hero Section -->
+    <section class="about-hero fade-in">
+      <div class="container">
+        <div class="about-hero-content">
+          <div class="about-hero-text">
+            <h1 class="about-title">About Impasto Photography</h1>
+            <p class="about-subtitle">
+              Capturing Life's Beautiful Moments Since 2010
+            </p>
+            <div class="about-breadcrumb">
+              <a href="#home">Home</a>
+              <i class="fas fa-chevron-right"></i>
+              <span>About Us</span>
             </div>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
+    <!-- Main Content -->
+    <main class="main-content">
       <!-- Our Story Section -->
       <section class="our-story section fade-in">
         <div class="container">
@@ -834,9 +862,14 @@
               From a passion project to a premier photography studio
             </p>
           </div>
-
           <div class="story-content">
-            <div></div>
+            <div class="story-image">
+              <img
+                src="assets/images/studio.jpg"
+                alt="Impasto Photography Studio"
+                class="no-context-menu"
+              />
+            </div>
             <div class="story-text">
               <p>
                 Impasto Photography began as a dream in 2010, founded with a
@@ -913,7 +946,6 @@
               The principles that guide every frame we capture
             </p>
           </div>
-
           <div class="values-grid">
             <div class="value-item">
               <div class="value-icon">
@@ -974,13 +1006,12 @@
               The passionate artists behind the lens
             </p>
           </div>
-
           <div class="team-grid">
             <div class="team-member">
               <div class="member-image">
                 <img
                   src="assets/images/image2.jpg"
-                  alt="Lead Photographer"
+                  alt="Kwame Asante - Lead Photographer & Founder"
                   class="no-context-menu"
                 />
                 <div class="member-overlay">
@@ -1008,7 +1039,7 @@
               <div class="member-image">
                 <img
                   src="assets/images/image3.jpg"
-                  alt="Studio Manager"
+                  alt="Adjoa Mensah - Studio Manager"
                   class="no-context-menu"
                 />
                 <div class="member-overlay">
@@ -1036,7 +1067,7 @@
               <div class="member-image">
                 <img
                   src="assets/images/image4.jpg"
-                  alt="Photographer"
+                  alt="Kofi Osei - Senior Photographer"
                   class="no-context-menu"
                 />
                 <div class="member-overlay">
@@ -1064,7 +1095,7 @@
               <div class="member-image">
                 <img
                   src="assets/images/image2.jpg"
-                  alt="Photo Editor"
+                  alt="Ama Boateng - Photo Editor & Retoucher"
                   class="no-context-menu"
                 />
                 <div class="member-overlay">
@@ -1104,7 +1135,6 @@
             </div>
             <p class="section-subtitle">Milestones that shaped our story</p>
           </div>
-
           <div class="timeline">
             <div class="timeline-item">
               <div class="timeline-content">
@@ -1194,7 +1224,7 @@
       </section>
     </main>
 
-    <!--footer-->
+    <!-- Footer -->
     <footer class="footer scale-in">
       <div class="footer-content container">
         <div class="footer-grid">
@@ -1214,6 +1244,7 @@
               you'll cherish for generations to come.
             </p>
           </div>
+
           <!-- Quick Links -->
           <div class="footer-section slide-in-left">
             <h3>Quick Links</h3>
@@ -1256,6 +1287,7 @@
               </li>
             </ul>
           </div>
+
           <!-- Services -->
           <div class="footer-section fade-in">
             <h3>Services</h3>
@@ -1304,6 +1336,7 @@
               </li>
             </ul>
           </div>
+
           <!-- Contact -->
           <div class="footer-section slide-in-right">
             <h3>Get In Touch</h3>
@@ -1359,6 +1392,7 @@
         </div>
       </div>
     </footer>
+
     <script src="assets/src/general.js"></script>
     <script src="assets/src/navhero.js"></script>
     <script>
@@ -1372,16 +1406,12 @@
       function initAboutPage() {
         // Initialize scroll animations for about page elements
         initAboutScrollAnimations();
-
         // Add smooth scrolling for internal links
         initSmoothScrolling();
-
         // Initialize timeline animations
         initTimelineAnimations();
-
         // Initialize team member hover effects
         initTeamMemberEffects();
-
         // Initialize value cards hover effects
         initValueCardEffects();
       }
@@ -1431,7 +1461,6 @@
             e.preventDefault();
             const targetId = this.getAttribute("href").substring(1);
             const targetElement = document.getElementById(targetId);
-
             if (targetElement) {
               targetElement.scrollIntoView({
                 behavior: "smooth",
@@ -1447,7 +1476,6 @@
        */
       function initTimelineAnimations() {
         const timelineItems = document.querySelectorAll(".timeline-item");
-
         const observerOptions = {
           threshold: 0.1,
           rootMargin: "0px 0px -50px 0px",
@@ -1553,101 +1581,16 @@
       }
 
       /**
-       * Add parallax effect to hero section
-       */
-      function initParallaxEffect() {
-        const heroSection = document.querySelector(".about-hero");
-
-        if (heroSection) {
-          window.addEventListener("scroll", () => {
-            const scrolled = window.pageYOffset;
-            const parallax = scrolled * 0.5;
-
-            heroSection.style.transform = `translateY(${parallax}px)`;
-          });
-        }
-      }
-
-      /**
-       * Initialize counter animation for timeline years
-       */
-      function initCounters() {
-        const timelineYears = document.querySelectorAll(".timeline-year");
-
-        const observerOptions = {
-          threshold: 0.5,
-        };
-
-        const observer = new IntersectionObserver((entries) => {
-          entries.forEach((entry) => {
-            if (entry.isIntersecting) {
-              const yearElement = entry.target;
-              const targetYear = parseInt(yearElement.textContent);
-
-              // Simple animation effect
-              yearElement.style.transform = "scale(1.2)";
-              yearElement.style.color = "var(--accent-color2)";
-
-              setTimeout(() => {
-                yearElement.style.transform = "scale(1)";
-                yearElement.style.color = "var(--accent-color)";
-              }, 300);
-
-              // Unobserve after animation
-              observer.unobserve(yearElement);
-            }
-          });
-        }, observerOptions);
-
-        timelineYears.forEach((year) => {
-          observer.observe(year);
-        });
-      }
-
-      /**
-       * Add interactive elements to mission/vision cards
-       */
-      function initMissionVisionInteractions() {
-        const missionCard = document.querySelector(".mission-card");
-        const visionCard = document.querySelector(".vision-card");
-
-        if (missionCard) {
-          missionCard.addEventListener("click", () => {
-            missionCard.style.transform = "scale(1.02)";
-            setTimeout(() => {
-              missionCard.style.transform = "translateY(-5px)";
-            }, 200);
-          });
-        }
-
-        if (visionCard) {
-          visionCard.addEventListener("click", () => {
-            visionCard.style.transform = "scale(1.02)";
-            setTimeout(() => {
-              visionCard.style.transform = "translateY(-5px)";
-            }, 200);
-          });
-        }
-      }
-
-      /**
        * Initialize all about page functionality when DOM is loaded
        */
       document.addEventListener("DOMContentLoaded", function () {
         // Initialize about page specific functionality
         initAboutPage();
 
-        // Initialize parallax effect
-        initParallaxEffect();
-
-        // Initialize counter animations
-        initCounters();
-
-        // Initialize mission/vision interactions
-        initMissionVisionInteractions();
-
         // Set active nav item for about page
-        const aboutLinks = document.querySelectorAll('a[href="about.html"]');
+        const aboutLinks = document.querySelectorAll(
+          'a[href="/pages/about.html"]'
+        );
         aboutLinks.forEach((link) => {
           link.classList.add("active");
         });
